# rclean

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  pyproject.toml
archive/: alt.rs  main.orig.rs
scripts/: clean  clean.py  demo.py  mkdetritus.py  mkdetritus.sh  release.sh
src/: constants.rs  lib.rs  main.rs
tests/: .drclean.toml  .rclean.toml  alt.rs  integration_test.rs  rclean.toml  rclean_settings.toml  test_config_discovery.rs  test_duration.rs  test_format_size.rs  test_globset.rs  test_json_output.rs  test_presets.rs  test_toml.rs
