[package]
name = "rclean"
version = "0.1.3"
edition = "2021"
authors = ["Shakeeb Alireza"]
description = "Safely remove files and directories matching a set of glob patterns."
readme = "README.md"
homepage = "https://github.com/shakfu/rclean"
repository = "https://github.com/shakfu/rclean"
license-file = "LICENSE"
keywords = ["clean", "delete"]
categories = ["command-line-utilities"]
include = ["/src", "Cargo.toml", "LICENSE", "README.md"]
publish = false

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
dialoguer = "0.11.0"
fs_extra = "1.3.0"
globset = "0.4.15"
log = "0.4.22"
logging_timer = "1.1.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
simplelog = "0.12.2"
walkdir = "2"

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Enable link time optimization
# panic = "abort"