[package]
name = "rclean"
version = "0.2.1"
edition = "2021"
authors = ["Shakeeb Alireza"]
description = "Safely remove files and directories matching a set of glob patterns."
readme = "README.md"
homepage = "https://github.com/shakfu/rclean"
repository = "https://github.com/shakfu/rclean"
license = "MIT"
keywords = ["clean", "delete", "cleanup", "filesystem", "glob"]
categories = ["command-line-utilities"]
include = ["/src", "/tests", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4"
serde_json = "1"
dialoguer = "0.11.0"
dirs = "6"
fs_extra = "1.3.0"
globset = "0.4.16"
indicatif = "0.17"
log = "0.4.27"
logging_timer = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
simplelog = "0.12.2"
walkdir = "2"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Enable link time optimization
# panic = "abort"